feat: add environment-specific email redirection for signup using NEXT_PUBLIC_VERCEL_ENV

--- a/env.example
+++ b/env.example
@@ -11,3 +11,6 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=tu-anon-key-aqui
 # ⚠️ Esta key tiene acceso completo a tu base de datos
 # Solo úsala en scripts del lado del servidor o desarrollo local
 SUPABASE_SERVICE_ROLE_KEY=tu-service-role-key-aqui
+
+# URL del sitio para redirecciones (ej: https://murodeseos.vercel.app o http://localhost:3000)
+NEXT_PUBLIC_VERCEL_ENV=http://localhost:3000
